--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
     -->
     <title>React App</title>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_MHfe5ktmrIk2lo-gm3VMhBoH79nFnts"
-      async
+      src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%"
       defer
     ></script>
   </head>
