--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>React App</title>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%"
-      defer
+      src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%"
+      async
     ></script>
   </head>
   <body>
